--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <footer style="text-align: center; padding: 10px; font-size: 12px; color: #666;">
+      <a href="https://github.com/mkatoo/ga-visualize" target="_blank" style="text-decoration: none;">View on GitHub</a>
+    </footer>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
